Fix guild icons sometimes being squished

--- a/web/src/components/GuildIcon.scss
+++ b/web/src/components/GuildIcon.scss
@@ -1,4 +1,5 @@
 .guild-icon {
+  flex-shrink: 0;
   width: 32px;
   height: 32px;
   object-fit: cover;
